Adwaita: fix notebook overflow arrows styling
which correctly go :active now, istead of :checked as in the past.

--- a/gtk/theme/Adwaita/_common.scss
+++ b/gtk/theme/Adwaita/_common.scss
@@ -2005,7 +2005,7 @@ notebook {
       min-width: 16px;
       border-radius: 0;
 
-      &:hover:not(:checked):not(:backdrop) {
+      &:hover:not(:active):not(:backdrop) {
         background-clip: padding-box;
         background-image: none;
         background-color: transparentize(white, 0.7);
